# dbome

./: .gitignore  CLAUDE.md  Makefile  README.md  bump_version.py  config.yaml.template  install.sh  main.py  pyproject.toml  pytest.ini  setup.sh
bq_view_manager/: __init__.py  main.py  template_compiler.py
bq_view_manager/templates/: .gitignore.template  Makefile  README.md.template  post-commit  setup.sh
bq_view_manager/templates/sql/views/: user_metrics.sql
dbome/: __init__.py  auth.py  config.py  deployment.py  exceptions.py  main.py  project_init.py  template_compiler.py  types.py
dbome/templates/: .gitignore.template  Makefile  README.md.template  config.yaml.template  post-commit  setup.sh
dbome/templates/sql/views/: example_view.sql.example  user_actions.sql  user_analytics.sql.example  user_segments.sql.example
sql/views/: example_view.sql  user_actions.sql  user_analytics.sql  user_metrics.sql  user_segments.sql  user_summary.sql
tests/: __init__.py  conftest.py  test_cli.py  test_main.py  test_template_compiler.py
