[project]
name = "bq-view-manager"
version = "0.1.0"
description = "A dbt-like BigQuery View Manager with simplified SQL syntax, dependency resolution, and git-based workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.13.0",
    "google-auth>=2.23.0",
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "sqlglot[rs]>=27.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
bq-view-manager = "bq_view_manager.main:main"
bq-view-deploy = "bq_view_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
